# io-shieldbreak

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/agents/: shieldbreak_reporter.md  trialist_prescriber.md  trialist_screener.md  trialist_skeptic.md
.github/workflows/: pages.yml
data/: runs.jsonl  schema.json
data/shieldbreaks/tam-depletion/: critiques.jsonl  excluded.jsonl  executive_summary.md  reviews.jsonl  schema.json  trials.jsonl
data/shieldbreaks/treg-depletion/: critiques.jsonl  excluded.jsonl  executive_summary.md  reviews.jsonl  schema.json  trials.jsonl
docs/: index.md  methods.md  runs.md  trials.md
docs/shieldbreaks/: index.md
docs/shieldbreaks/tam-depletion/: critique.md  index.md  scope_summary.md  tam-depletion-pharmacodynamic-results.html
docs/shieldbreaks/treg-depletion/: critique.md  index.md  scope_summary.md  treg-depletion-pharmacodynamic-results.html
docs/stylesheets/: tam-depletion.css  treg-depletion.css
methods/: index.html
prompts/: extract.md  search.md
prompts/shieldbreaks/tam-depletion/: extract.md  search.md
runs/: index.html
scripts/: backfill_counterproductive.py  backfill_last_author.py  build_critique.py  build_report.py  build_table.py  normalize_pct_change.py
search/: search_index.json
shieldbreaks/: index.html
shieldbreaks/tam-depletion/: index.html  tam-depletion-pharmacodynamic-results.html
shieldbreaks/treg-depletion/: index.html  treg-depletion-pharmacodynamic-results.html
styles/treg-depletion/: STYLE.md
(+246 files in other folders)
